<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="advanced">Advanced panel</string>
    <string name="app_name">Calculator</string>
    <string name="basic">Basic panel</string>
    <string name="cd_ac">all clear</string>
    <string name="cd_add">add</string>
    <string name="cd_alternative_trigonometric_functions">alternative trigonometric functions</string>
    <string name="cd_ans">ans</string>
    <string name="cd_clear">clear</string>
    <string name="cd_cos_reci">inverse cosine</string>
    <string name="cd_cosh_reci">inverse hyperbolic cosine</string>
    <string name="cd_cosine">cosine</string>
    <string name="cd_cubed">cubed</string>
    <string name="cd_d0">zero</string>
    <string name="cd_d1">one</string>
    <string name="cd_d2">two</string>
    <string name="cd_d3">three</string>
    <string name="cd_d4">four</string>
    <string name="cd_d5">five</string>
    <string name="cd_d6">six</string>
    <string name="cd_d7">seven</string>
    <string name="cd_d8">eight</string>
    <string name="cd_d9">nine</string>
    <string name="cd_deg">degrees</string>
    <string name="cd_del">delete</string>
    <string name="cd_divide">divide</string>
    <string name="cd_dot">decimal</string>
    <string name="cd_engineering_experiment">engineering experiment</string>
    <string name="cd_equals">equals</string>
    <string name="cd_error">error</string>
    <string name="cd_exponential">exponential</string>
    <string name="cd_factorial">factorial</string>
    <string name="cd_hyperbolic_cosine">hyperbolic cosine</string>
    <string name="cd_hyperbolic_sine">hyperbolic sine</string>
    <string name="cd_hyperbolic_tangent">hyperbolic tangent</string>
    <string name="cd_left_parent">left parent</string>
    <string name="cd_log">log</string>
    <string name="cd_log2x">log base two</string>
    <string name="cd_memory_add">memory add</string>
    <string name="cd_memory_clear">memory clear</string>
    <string name="cd_memory_recall">memory recall</string>
    <string name="cd_memory_subtract">memory subtract</string>
    <string name="cd_multiply">multiply</string>
    <string name="cd_natural_logarithm">natural logarithm</string>
    <string name="cd_negative">negative number</string>
    <string name="cd_percent">percent</string>
    <string name="cd_pie">pie</string>
    <string name="cd_plus_minus">plus minus</string>
    <string name="cd_power">power</string>
    <string name="cd_radian">radian</string>
    <string name="cd_random">random</string>
    <string name="cd_reciprocal">reciprocal</string>
    <string name="cd_right_parent">right parent</string>
    <string name="cd_root">root</string>
    <string name="cd_sine">sine</string>
    <string name="cd_sine_reci">inverse sine</string>
    <string name="cd_sinh_reci">inverse hyperbolic sine</string>
    <string name="cd_square">square</string>
    <string name="cd_square_root">square root</string>
    <string name="cd_subtract">subtract</string>
    <string name="cd_tan_reci">inverse tangent</string>
    <string name="cd_tangent">tangent</string>
    <string name="cd_tanh_reci">inverse hyperbolic tangent</string>
    <string name="cd_two_x">two to the power of</string>
    <string name="clear">CLR</string>
    <string name="clear_history">Clear history</string>
    <string name="cos">cos</string>
    <string name="del">DELETE</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="e">e</string>
    <string name="error">Error</string>
    <string name="leftParen">(</string>
    <string name="lg">log</string>
    <string name="ln">ln</string>
    <string name="rightParen">)</string>
    <string name="sin">sin</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tan">tan</string>
    <string name="text_copied_toast">Text copied.</string>
</resources>
