<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/calculator_root" android:background="@drawable/cal_bg" android:paddingBottom="@dimen/port_container_paddingBottom" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/main_layout" android:background="@drawable/cal_bg" android:layout_width="match_parent" android:layout_height="match_parent" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/controller" android:layout_width="match_parent" android:layout_height="@dimen/controller_height" android:layout_marginLeft="@dimen/controller_padding_horizontal" android:layout_marginTop="@dimen/controller_margin_top" android:layout_marginRight="@dimen/controller_padding_horizontal" android:layout_marginBottom="@dimen/controller_margin_bottom" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <LinearLayout android:orientation="horizontal" style="@style/divide_height_equally">
            <com.smartisanos.calculator.HammerButton android:id="@id/mc" android:background="@drawable/cal_selector_btn_black" android:src="@drawable/mc" android:contentDescription="@string/cd_memory_clear" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/madd" android:background="@drawable/cal_selector_btn_black" android:src="@drawable/madd" android:contentDescription="@string/cd_memory_add" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/mminus" android:background="@drawable/cal_selector_btn_black" android:src="@drawable/mminus" android:contentDescription="@string/cd_memory_subtract" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/mr" android:background="@drawable/cal_selector_btn_black_focus" android:src="@drawable/mr" android:contentDescription="@string/cd_memory_recall" style="@style/divide_width_equally" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" style="@style/divide_height_equally">
            <FrameLayout style="@style/divide_width_equally">
                <com.smartisanos.calculator.HammerButton android:id="@id/del" android:background="@drawable/cal_selector_btn_grey" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/del" android:contentDescription="@string/cd_del" />
                <com.smartisanos.calculator.HammerButton android:id="@id/c" android:background="@drawable/cal_selector_btn_grey" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/c" android:contentDescription="@string/cd_clear" />
                <com.smartisanos.calculator.HammerButton android:id="@id/ac" android:background="@drawable/cal_selector_btn_grey" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/ac" android:contentDescription="@string/cd_ac" />
            </FrameLayout>
            <com.smartisanos.calculator.HammerButton android:id="@id/neg" android:background="@drawable/cal_selector_btn_grey" android:src="@drawable/addminus" android:contentDescription="@string/cd_plus_minus" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/div" android:background="@drawable/cal_selector_btn_grey_focus" android:src="@drawable/div" android:contentDescription="@string/cd_divide" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/mul" android:background="@drawable/cal_selector_btn_grey_focus" android:src="@drawable/multiply" android:contentDescription="@string/cd_multiply" style="@style/divide_width_equally" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" style="@style/divide_height_equally">
            <com.smartisanos.calculator.HammerButton android:id="@id/digit7" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/d7" android:contentDescription="@string/cd_d7" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/digit8" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/d8" android:contentDescription="@string/cd_d8" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/digit9" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/d9" android:contentDescription="@string/cd_d9" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/minus" android:background="@drawable/cal_selector_btn_grey_focus" android:src="@drawable/minus" android:contentDescription="@string/cd_subtract" style="@style/divide_width_equally" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" style="@style/divide_height_equally">
            <com.smartisanos.calculator.HammerButton android:id="@id/digit4" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/d4" android:contentDescription="@string/cd_d4" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/digit5" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/d5" android:contentDescription="@string/cd_d5" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/digit6" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/d6" android:contentDescription="@string/cd_d6" style="@style/divide_width_equally" />
            <com.smartisanos.calculator.HammerButton android:id="@id/add" android:background="@drawable/cal_selector_btn_grey_focus" android:src="@drawable/add" android:contentDescription="@string/cd_add" style="@style/divide_width_equally" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_weight="2.0" style="@style/divide_height_equally">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="3.0">
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
                    <com.smartisanos.calculator.HammerButton android:id="@id/digit1" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/d1" android:contentDescription="@string/cd_d1" style="@style/divide_width_equally" />
                    <com.smartisanos.calculator.HammerButton android:id="@id/digit2" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/d2" android:contentDescription="@string/cd_d2" style="@style/divide_width_equally" />
                    <com.smartisanos.calculator.HammerButton android:id="@id/digit3" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/d3" android:contentDescription="@string/cd_d3" style="@style/divide_width_equally" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
                    <com.smartisanos.calculator.HammerButton android:id="@id/digit0" android:background="@drawable/selector_digit_0" android:layout_width="0.0dp" android:layout_height="match_parent" android:src="@drawable/d0" android:layout_weight="2.0" android:contentDescription="@string/cd_d0" />
                    <com.smartisanos.calculator.HammerButton android:id="@id/dot" android:background="@drawable/cal_selector_btn_white" android:src="@drawable/dot" android:contentDescription="@string/cd_dot" style="@style/divide_width_equally" />
                </LinearLayout>
            </LinearLayout>
            <com.smartisanos.calculator.HammerButton android:id="@id/equal" android:background="@drawable/selector_amount" android:layout_width="0.0dp" android:layout_height="match_parent" android:src="@drawable/amount" android:layout_weight="1.0" android:contentDescription="@string/cd_equals" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/show_view" android:background="@drawable/typebox" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="@dimen/typebox_margin_left" android:layout_marginTop="@dimen/top_marginTop" android:layout_marginRight="@dimen/typebox_margin_right" android:layout_above="@id/controller" android:layout_centerHorizontal="true">
        <com.smartisanos.calculator.DisplayInputView android:gravity="center_horizontal" android:id="@id/show_input" android:focusable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/display_input_view_margin_right" android:layout_marginRight="@dimen/display_input_view_margin_right" android:layout_marginBottom="@dimen/input_field_bottom" />
        <com.smartisanos.calculator.DisplayResultView android:gravity="center_horizontal" android:id="@id/show_result" android:focusable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/display_result_view_margin_right" android:layout_marginRight="@dimen/display_result_view_margin_right" android:layout_marginBottom="@dimen/result_field_bottom" />
    </LinearLayout>
    <TextView android:textSize="@dimen/clipmenu_text_size" android:textColor="@color/clip_menu_text_color" android:gravity="center" android:id="@id/copy" android:background="@drawable/selector_copy" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/clipmenu_margin_top" android:text="@android:string/copy" android:layout_alignParentTop="true" />
</RelativeLayout>
